@@ -437,7 +437,7 @@ sub linux_system_info() {
 
 sub findAndPrintUtilities() {
 	# lets just dump out some standard defines, from the vrml.conf file.
-	my @dumpToVRMLCONF = ( "BROWSER", "SOUNDCONV", "UNZIP", "WGET", "CONVERT", "COPIER", "JAVA");
+	my @dumpToVRMLCONF = ( "BROWSER", "SOUNDCONV", "UNZIP", "WGET", "CONVERT", "JAVA");
 
 	my $val;
 
@@ -481,8 +481,6 @@ sub tryToFind() {
 		if ("" eq $try) {$try = `which curl`; $try =~ s/^\s+//; $try =~ s/\s+$//;}
 	} elsif ("CONVERT" eq $tofind) {
 		$try = `which convert`; $try =~ s/^\s+//; $try =~ s/\s+$//;
-	} elsif ("COPIER" eq $tofind) {
-		$try = `which cp`; $try =~ s/^\s+//; $try =~ s/\s+$//;
 	} elsif ("JAVA" eq $tofind) {
 		$try = `which java`; $try =~ s/^\s+//; $try =~ s/\s+$//;
 	}
